02-test passed, with flight validation

--- a/Flight-Planner.Services/Flight-Planner.Services.csproj
+++ b/Flight-Planner.Services/Flight-Planner.Services.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AirportService.cs" />
     <Compile Include="DbService.cs" />
     <Compile Include="EntityService.cs" />
     <Compile Include="FlightService.cs" />
