3rd and 4th tests passed, 5th almost

--- a/Flight-Planner/Flight-Planner.csproj
+++ b/Flight-Planner/Flight-Planner.csproj
@@ -199,6 +199,8 @@
     <Compile Include="Models\AirportResponse.cs" />
     <Compile Include="Models\FlightRequest.cs" />
     <Compile Include="Models\FlightResponse.cs" />
+    <Compile Include="Models\PageResult.cs" />
+    <Compile Include="Models\SearchFlightRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
