--- a/Flight-Planner.Core/Flight-Planner.Core.csproj
+++ b/Flight-Planner.Core/Flight-Planner.Core.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Models\Entity.cs" />
     <Compile Include="Models\Flight.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\IAirportService.cs" />
     <Compile Include="Services\IDbService.cs" />
     <Compile Include="Services\IEntityService.cs" />
     <Compile Include="Services\IFlightService.cs" />
