--- a/Flight-Planner.Services/Flight-Planner.Services.csproj
+++ b/Flight-Planner.Services/Flight-Planner.Services.csproj
@@ -49,6 +49,9 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WebGrease">
+      <HintPath>..\Flight-Planner-Data\packages\WebGrease.1.6.0\lib\WebGrease.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AirportService.cs" />
